[package]
name = "reactio"
version = "0.1.0"
edition = "2021"

authors = ["Jack Zhang <zjgogle@gmail.com>"]
rust-version = "1.63"
description = "Portable Reactor Pattern"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zjgogle/polling"
keywords = ["reactor", "non-blocking", "epoll", "iocp"]
categories = ["event-driven", "network-programming", "os"]
exclude = ["/.*"]


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.7"
libc = "0.2"
