[package]
name = "reactio"
version = "0.1.3"
edition = "2021"

authors = ["Jack Zhang <zjgoggle@gmail.com>"]
rust-version = "1.63"
description = "Event Driven Nonblocking Reactor Pattern"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/zjgoggle/reactio-rs"
readme = "README.md"
keywords = ["reactor", "event-driven", "non-blocking", "epoll", "iocp"]
categories = ["asynchronous", "concurrency", "network-programming", "os"]
exclude = ["/.*"]


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.7"
libc = "0.2"

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
